2f4ffd9db479e871ef3bc94e7a13c32bc060187f Dev - fix: More fixes for alignment - this time to the right with styling
Sync to source repo @2f4ffd9db479e871ef3bc94e7a13c32bc060187f

--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -31,6 +31,10 @@ div.dataTables_wrapper {
   position: relative;
 }
 
+div.dt-buttons {
+  position: initial;
+}
+
 div.dt-button-info {
   position: fixed;
   top: 50%;
@@ -77,6 +81,8 @@ button.dtb-hide-drop {
 div.dt-button-collection-title {
   text-align: center;
   padding: 0.3em 0 0.5em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
   font-size: 0.9em;
 }
 
@@ -119,7 +125,6 @@ div.dt-button-collection span.dt-button-spacer.bar {
 div.dt-button-collection {
   position: absolute;
   z-index: 2001;
-  width: 100%;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -333,6 +338,9 @@ div.dt-buttons a.btn.processing:after {
   -ms-animation: dtb-spinner 1500ms infinite linear;
   -webkit-animation: dtb-spinner 1500ms infinite linear;
   -moz-animation: dtb-spinner 1500ms infinite linear;
+}
+div.dt-buttons div.btn-group {
+  position: initial;
 }
 
 div.dt-btn-split-wrapper button.dt-btn-split-drop {
